반응형 작업 중 헤더와 히어로

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url(font.css);
 body {font-family: "Work Sans", sans-serif;}
 
-.container {width: 1120px; margin: 0 auto;}
+.container {max-width: 1120px; margin: 0 auto;}
 .btn_view {font-size: 15px;background: #c64932; color: #ffffff; padding: 9px 21px; display: inline-block;}
 .btn_view.bk {background: #000;}
 header {height: 80px; display: flex;justify-content: space-between;position: absolute; z-index:10;;width: 100%;}
@@ -11,7 +11,7 @@ header h1 {width: 350px; display: flex;justify-content: center;align-items: cent
 header nav {width: 1000px; }
 header nav .gnb{display: flex;}
 header nav .gnb li {font-size: 18; position: relative;}
-header nav .gnb li  a {padding: 28px 40px; display: block;}
+header nav .gnb li  a {padding: 28px 2vw; display: block;}
 
 header nav .gnb li .lnb {background: rgba(0,0,0,0.7); position: absolute; width: 100%; height: 0; overflow:hidden;transition: 0.4s;backdrop-filter:blur(5px);}
 header nav .gnb li .lnb:hover {background:#c64932;}
@@ -19,14 +19,21 @@ header nav .gnb li .lnb:hover a {color: #fff;}
 header nav .gnb li .lnb li {text-align: center;}
 header nav .gnb li .lnb li a {color: #fff;padding: 0px 0; line-height: 70px;}
 header nav .gnb:hover li .lnb {height: 280px;}
-header .more {width: 150px;display: flex;justify-content: center;align-items: center;}
-header .more::before {content: ' ';width: 4px;height: 18px; background: #000000;position: absolute;}
-header .more::after {content: ''; width: 4px;height: 18px;background: #000000;position: absolute; transform: rotate(90deg) ;}
-header .more:hover::before {transform: rotate(45deg);height: 30px;}
-header .more:hover::after {transform: rotate(135deg);height: 30px;}
 
+header .more {width: 150px;display: flex;justify-content: center;align-items: center; z-index: 2;}
+header .more::before {content: ' ';width: 4px;height: 18px; background: #000000;position: absolute;}
+header .more::after {content: ''; width: 4px;height: 18px;background: #000000;position: absolute; transform: rotate(90deg);transition:0.3s ;}
+
+
+
+header .more.on::before {transform: rotate(45deg);height: 30px; background: #fff;}
+header .more.on::after {transform: rotate(135deg);height: 30px; background: #fff;}
+
+.brand {position: fixed; width: 100%;height: 100vh; background: rgba(0, 0, 0, 0.8); left: 0; top: 0; display: none;
+}
+.brand p {font-size: 100px; display: flex;justify-content: center;align-items: center;color: #fff; height: 100%;}
 .hero {}
-.hero .textbox {position: absolute; background: rgba(0, 0, 0, 0.7);z-index: 9; left: 50%;width: 600px;padding: 60px 70px; box-sizing: border-box; margin-left: 140px; top: 50%; margin-top: -195px;}
+.hero .textbox {position: absolute; background: rgba(0, 0, 0, 0.7);z-index: 9; left: 50%;width: 600px;padding: 60px 70px; box-sizing: border-box; margin-left: 140px; top: 50%; margin-top: -195px; display: none;}
 .hero .textbox .title {font-size: 55px; color: #fff; letter-spacing: -2px; margin-bottom: 24px;}
 .hero .textbox p {font-size: 18px; color: #fff; margin-bottom: 36px; line-height: 2;}
 
@@ -54,7 +61,7 @@ header .more:hover::after {transform: rotate(135deg);height: 30px;}
 .section3 {padding: 113px 0;}
 
 .section3 ul{font-size: 40px; margin-bottom: 37px; text-align:center;display: flex; 
-    justify-content: space-between;}
+justify-content: space-between;}
 .section3 ul li{ }
 .section3 ul li a{}
 .section3 ul li a figure{}
@@ -64,3 +71,15 @@ header .more:hover::after {transform: rotate(135deg);height: 30px;}
 
 
 footer {background: #000; padding: 90px 0; display: flex; justify-content: center; align-items: center;}
+
+
+@media screen and (max-width:830px) {
+    header {flex-wrap:wrap;}
+    header h1 {width: 100%;}
+    header .gnb {justify-content: center; background:rgba (198,73,50,0.8);}
+    header .gnb a {color:#fff}
+    header .more {position: absolute; height: 30px;right:20px; top: 10px; width: 50px;}
+
+    .hero {height:100vh;}
+    .hero .swiper {height:100%}
+      }
