--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ header .more.on::after {transform: rotate(135deg);height: 30px; background: #fff
 
 
 .section1 {padding: 113px 0;}        
-.section1 .container {display: flex; justify-content: space-between ; align-items: center;}
+.section1 .container{display: flex; justify-content: space-between ; align-items: center;gap:30px}
+.section1 .container img {width: 100%;}
 .section1 .container strong {font-size: 40px; margin-bottom: 50px; display: block;}
 .section1 .container p {font-size: 18px; line-height: 2;margin-bottom: 37px;}
 
@@ -73,13 +74,26 @@ justify-content: space-between;}
 footer {background: #000; padding: 90px 0; display: flex; justify-content: center; align-items: center;}
 
 
-@media screen and (max-width:830px) {
+@media screen and (max-width:1100px) {
+    .section3 .container .content 
+    {flex-direction: column;gap:30px;}
+    .section3 .container .content li img {width: 100%;}
     header {flex-wrap:wrap;}
     header h1 {width: 100%;}
-    header .gnb {justify-content: center; background:rgba (198,73,50,0.8);}
+    header .gnb {justify-content: center; background:rgba(198,73,50,0.8);}
     header .gnb a {color:#fff}
     header .more {position: absolute; height: 30px;right:20px; top: 10px; width: 50px;}
 
     .hero {height:100vh;}
     .hero .swiper {height:100%}
       }
+
+      .section1 .container {flex-direction: column;}
+      .section1 .textbox {padding: 0 20px;}
+    
+      .section2 .left {width: 100%;}
+      .section2 .left .textbox {padding: 0 20px;}
+      .section2 .right {display: none;}
+      
+      footer h1 {text-align: center;}
+      footer img {width: 80%;}
